[tool.poetry]
name = "ontogen"
version = "0.1.0"
description = ""
authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^2.2.3"
argser = "^0.0.15"
rdflib = "^4.2.2"
langdetect = "^1.0.7"
regex = "^2019.12.20"
pymorphy2-dicts-uk = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
